<resources>
    <string name="app_name">JuegoVoley</string>
    <string name="textSplash">Juego lógico de Voley</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegistro">Registro</string>
    <!--Registro-->
    <string name="correoEt">Correo electrónico</string>
    <string name="passEt">Contraseña</string>
    <string name="nombreEt">Nombre</string>
    <string name="fechaEt">Fecha</string>
    <string name="Registrar">Registrar</string>
    <!--Login-->
    <string name="correoLogin">Correo electrónico</string>
    <string name="passwordLogin">Contraseña</string>
    <string name="loginBtn">Ingresar</string>
    <!--Menu-->
    <string name="MiPuntuaciontxt">Mi puntuación</string>
    <string name="balon">--</string>
    <string name="uidMenu">--</string>
    <string name="correoMenu">--</string>
    <string name="nombreMenu">--</string>
    <string name="Menutxt">Menú</string>
    <string name="btnCerrarSesion">Cerrar sesión</string>
    <string name="Jugar">Jugar</string>
    <string name="Puntuaciones">Puntuaciones</string>
    <string name="About">Acerca de</string>
    <!--Menu-->
    <string name="score">Mi puntuación: 0</string>
    <string name="nombreJuego">--</string>
    <!--Jugadores-->
    <string name="jg1">jg1</string>
    <string name="jg2">jg2</string>
    <string name="jg3">jg3</string>
    <string name="jg4">jg4</string>
    <string name="jg5">jg5</string>
    <string name="jg6">jg6</string>
    <!--Instrucciones-->
    <string name="instruccioes">Instrucciones</string>
    <string name="pase">Pase</string>
    <string name="acomodo">Acomodo</string>
    <string name="remate">Remate</string>
    <string name="confirmar">Confirmar</string>
    <string name="paseTexto">El pase nos permite mover el balón una casilla, en las direcciones izquierda, derecha, atras y adelante dependiendo de donde se encuentre el balón.</string>
    <string name="acomodoTexto">El acomodo nos permite mover el balón dos casillas a los lados ó de forma diagonal hacía atras y adelante dependiendo de donde se encuentre el balón</string>
    <string name="remateTexto">El remate nos permite mover el balón dos casillas hacia enfrente ó una casilla diagonal hacia enfrente. El remate tiene una restricción y es que no se puede mover el balón a tu cancha con este movimiento.</string>
    <string name="confirmarTexto">Será necesario confirmar tu movimiento para realizar alguna acción</string>
</resources>