<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cancha"
    tools:context=".Juego">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical">

        <!--Info-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scoreJuego"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="voley.json"
                app:lottie_imageAssetsFolder="assets"
                app:lottie_loop="true" />

            <TextView
                android:id="@+id/nombreJuego"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/nombreJuego"
                android:textSize="20sp" />

        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <CheckBox
        android:id="@+id/jg4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="83dp"
        android:layout_marginBottom="273dp"
        android:buttonTint="@color/purple_200"
        android:onClick="movements"
        android:text="@string/jg4" />

    <CheckBox
        android:id="@+id/jg5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="274dp"
        android:buttonTint="@color/purple_200"
        android:onClick="movements"
        android:text="@string/jg5" />

    <CheckBox
        android:id="@+id/jg6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="271dp"
        android:buttonTint="@color/purple_200"
        android:onClick="movements"
        android:text="@string/jg6" />

    <CheckBox
        android:id="@+id/jg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="186dp"
        android:buttonTint="@color/purple_200"
        android:onClick="movements"
        android:text="@string/jg2" />

    <CheckBox
        android:id="@+id/jg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="82dp"
        android:layout_marginBottom="185dp"
        android:buttonTint="@color/purple_200"
        android:checked="false"
        android:onClick="movements"
        android:text="@string/jg1" />

    <CheckBox
        android:id="@+id/jg3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="190dp"
        android:buttonTint="@color/purple_200"
        android:onClick="movements"
        android:text="@string/jg3" />

    <CheckBox
        android:id="@+id/en5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="99dp"
        android:buttonTint="#ff0000"
        android:onClick="movementsEnemy"
        android:text="en5" />

    <CheckBox
        android:id="@+id/en3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="97dp"
        android:buttonTint="#ff0000"
        android:onClick="movementsEnemy"
        android:text="en3" />

    <CheckBox
        android:id="@+id/en2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="149dp"
        android:buttonTint="#ff0000"
        android:onClick="movementsEnemy"
        android:text="en2" />

    <CheckBox
        android:id="@+id/en1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="153dp"
        android:buttonTint="#ff0000"
        android:onClick="movementsEnemy"
        android:text="en1" />

    <CheckBox
        android:id="@+id/en6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="95dp"
        android:buttonTint="#ff0000"
        android:onClick="movementsEnemy"
        android:text="en6" />

    <CheckBox
        android:id="@+id/en4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="101dp"
        android:buttonTint="#ff0000"
        android:onClick="movementsEnemy"
        android:text="en4" />

    <Button
        android:id="@+id/btnPase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_personalizado"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="67dp"
        android:layout_marginBottom="113dp"
        android:text="Pase" />

    <Button
        android:id="@+id/btnAcomodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_personalizado"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="251dp"
        android:layout_marginBottom="109dp"
        android:text="acomodo" />

    <Button
        android:id="@+id/btnRemate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_personalizado"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="112dp"
        android:text="remate" />

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="61dp"
        android:background="@drawable/boton_personalizado"
        android:text="Confirmar" />


</RelativeLayout>